[package]
name = "aspartam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync","rt"] }
async-trait = "0.1"
futures-util = { version = "0.3" }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["sync","rt-multi-thread","time"] }