[package]
name = "aspartam"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors  = [ "Jakub Smulski <hgonomeg@gmail.com>" ]
description = "Minimalistic actor framework based on tokio, inspired by actix"
repository = "https://github.com/hgonomeg/aspartam"
documnetation = "https://docs.rs/aspartam"
#keywords
#categories


[dependencies]
tokio = { version = "1", features = ["sync","rt"] }
async-trait = "0.1"
futures-util = { version = "0.3" }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["sync","rt-multi-thread","time"] }
